<resources>
    <string name="app_name" translatable="false">TP1</string>
    <string name="login_header">Log in</string>
    <string name="login_hint">Login</string>
    <string name="password_hint">Password</string>
    <string name="register_button"><u>Register</u></string>
    <string name="name_hint">Name</string>
    <string name="register_header">Sign up</string>
    <string name="accounts_header">Accounts</string>
    <string name="profile_header">Welcome</string>
    <string name="logout_button">Log out</string>
    <string name="login_button">Sign in</string>
    <string name="create_account_button">Register</string>
    <string name="essentials_button">Go to Android Essentials</string>
    <string name="accounts_button">Go to accounts list</string>
</resources>
